# claude-backup-cron

./: .gitignore  .semgrepignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: INSTALL.md  architecture.d2
examples/: config.toml
src/claude_backup_cron/: __init__.py  __main__.py  alerting.py  backup.py  cli.py  config.py  destinations.py  encryption.py  errors.py  hashing.py  scheduler.py  sources.py
tests/: test_alerting.py  test_backup.py  test_cli.py  test_config.py  test_destinations.py  test_encryption.py  test_hashing.py  test_scheduler.py  test_sources.py
