[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "claude-backup-cron"
description = "Scheduled encrypted backups for Claude Code memory and similar small directories."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [{ name = "Hinano Hart", email = "hinanohart@gmail.com" }]
keywords = [
  "backup",
  "claude-code",
  "age-encryption",
  "cron",
  "scheduled-backup",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[project.scripts]
claude-backup-cron = "claude_backup_cron.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/claude-backup-cron"
Documentation = "https://github.com/hinanohart/claude-backup-cron#readme"
Issues = "https://github.com/hinanohart/claude-backup-cron/issues"
Changelog = "https://github.com/hinanohart/claude-backup-cron/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/claude_backup_cron/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_backup_cron"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docs/",
  "examples/",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "SECURITY.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
filterwarnings = [
  "error",
  # HTTPServer test stubs emit socket-cleanup ResourceWarnings on thread
  # teardown. Not a product concern; ignore to keep the strict filter.
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL", "RUF", "S", "SIM", "PIE"]
ignore = [
  "S101",    # asserts are fine in tests
  "PLR0911", # CLI dispatch naturally has many exit points
  "PLR0912", # orchestration naturally has branches
  "PLR2004", # readable magic numbers
  "PLR0913", # many-parameter fns for dataclass plumbing
  "PLR0915", # long functions are clearer when linear
  "E501",    # long docstrings / help strings
  "S607",    # subprocess uses "git" / "aws" / "age" / "crontab" from PATH by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "PLR2004",
  "S101",
  "S105",
  "S106",
  "S108",
  "S311",
  "S603",
  "PLC0415",
  "B018",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/claude_backup_cron"]
